--- a/index.html
+++ b/index.html
@@ -4,13 +4,24 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>CSS Chapter 1</title>
+    <style>
+        h1{
+            color:red;
+            background-color: black;
+        }
+    </style>
 </head>
 <body>
     <!-- Inline Style -->
-    <h1 style="color: rgb(255, 0, 0);">Apna College</h1>
+    <!--<h1 style="color: rgb(255, 0, 0);">Apna College</h1>
     <h1 style="color: rgb(255, 0, 0);">Grishma Kandel</h1>
     <h1 style="color: rgb(255, 0, 0);">Hello World</h1>
     <p style="color: pink">This is a paragraph.</p>
     <button style="color:lightblue; background-color: yellow;">Help</button>
+
+    <!-- Using Style Tag-->
+    <h1>Apna College</h1>
+    <h1>Grishma Kandel</h1>
+    <h1>Hello World</h1>
 </body>
 </html>
