--- a/index.html
+++ b/index.html
@@ -4,12 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>CSS Chapter 1</title>
-    <style>
-        h1{
-            color:red;
-            background-color: black;
-        }
-    </style>
+    <!--Linking HTML with CSS file-->
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <!-- Inline Style -->
