:bug: Fixed comment syntax error

--- a/index.html
+++ b/index.html
@@ -9,11 +9,15 @@
 </head>
 <body>
     <!-- Inline Style -->
-    <!--<h1 style="color: rgb(255, 0, 0);">Apna College</h1>
+
+    <!--
+    
+    <h1 style="color: rgb(255, 0, 0);">Apna College</h1>
     <h1 style="color: rgb(255, 0, 0);">Grishma Kandel</h1>
     <h1 style="color: rgb(255, 0, 0);">Hello World</h1>
     <p style="color: pink">This is a paragraph.</p>
-    <button style="color:lightblue; background-color: yellow;">Help</button>
+    <button style="color:lightblue; background-color: yellow;">Help</button> 
+-->
 
     <!-- Using Style Tag-->
     <h1>Apna College</h1>
