Color Property Added

--- a/index.html
+++ b/index.html
@@ -23,5 +23,13 @@
     <h1>Apna College</h1>
     <h1>Grishma Kandel</h1>
     <h1>Hello World</h1>
+<br/><br/>
+
+<h1>Grishma Kandel</h1>
+<h1>Apna College</h1>
+<h1>This is paragraph 1</h1>
+<h2>This is paragraph 2</h2>
+<button>This is button 1</button>
+<button>This is button 2</button>
 </body>
 </html>
