rgb colors added

--- a/index.html
+++ b/index.html
@@ -27,8 +27,8 @@
 
 <h1>Grishma Kandel</h1>
 <h1>Apna College</h1>
-<h1>This is paragraph 1</h1>
-<h1>This is paragraph 2</h1>
+<p>This is paragraph 1</p>
+<p>This is paragraph 2</p>
 <button>This is button 1</button>
 <button>This is button 2</button>
 </body>
