Font Weight and Text-decoration added

--- a/index2.html
+++ b/index2.html
@@ -9,10 +9,12 @@
 <body>
     <h1>Welcome to My Web Page</h1>
     <p>
+        <a href="goggle.com">Google Me</a>
         This is a sample paragraph to demonstrate how text content can be structured in an HTML document. 
         HTML allows us to create well-formatted web pages by using various elements such as headings, paragraphs, 
         lists, images, and more. The paragraph tag &lt;p&gt; is commonly used to display blocks of text in a readable format.
         <br><br>
+        <h2>What's important when writing content for a webpage? </h2>
         When writing content for a webpage, it's important to consider readability and accessibility. 
         Breaking text into smaller sections, using headings, and adding spacing improves user experience. 
         Additionally, web designers often apply CSS styles to enhance the appearance of text, such as changing 
