Class Selector Added

--- a/practiceQs2.html
+++ b/practiceQs2.html
@@ -34,7 +34,7 @@
         </p>
         <h3>What is the highest salary for a spacex engineer?</h3>
         <span>
-            <button>+upvote</button>
+            <button class="upvote">+upvote</button>
             <button>answer</button>
         </span>
         <hr />
@@ -45,18 +45,18 @@
         </p>
         <h3>What is the syllabus for JEE 2024?</h3>
         <span>
-            <button>+upvote</button>
+            <button class="upvote">+upvote</button>
             <button>answer</button>
         </span>
         <hr />
 
-        <p>
+        <p class="upvote">
         Catlyn &nbsp;&nbsp;&nbsp;&nbsp;
         <a class="follow" href="/catlyn">Follow pqr</a>
         </p>
         <h3>Why is the sky blue?</h3>
         <span>
-            <button>+upvote</button>
+            <button class="upvote">+upvote</button>
             <button>answer</button>
         </span>
         <hr />
@@ -67,7 +67,7 @@
             </p>
             <h3>Why is the sky blue?</h3>
             <span>
-                <button>+upvote</button>
+                <button class="upvote">+upvote</button>
                 <button>answer</button>
             </span>
             <hr />
