--- a/practiceQs2.html
+++ b/practiceQs2.html
@@ -72,5 +72,14 @@
             </span>
             <hr />
     </main>
+    <div id="myId">
+        <p>This is a paragraph.</p>
+    </div>
+    <div>
+        <input type="radio" id="yes" name="agreement">
+        <label for="yes">Yes</label>
+        <input type="radio" id="no" name="agreement">
+        <label for="no">No</label>
+    </div>
   </body>
 </html>
