Pseudo element added

--- a/practiceQs2.html
+++ b/practiceQs2.html
@@ -73,7 +73,7 @@
             <hr />
     </main>
     <div id="myId">
-        <p>This is a paragraph.</p>
+        <p>This is a paragraph.This is a website. It is the second paragraph. This is the fourth line.</p>
     </div>
     <div>
         <input type="radio" id="yes" name="agreement">
