--- a/index.html
+++ b/index.html
@@ -1,35 +1,30 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>CSS Chapter 1</title>
-    <!--Linking HTML with CSS file-->
-    <link rel="stylesheet" href="style.css">
-</head>
-<body>
-    <!-- Inline Style -->
-
-    <!--
-    
-    <h1 style="color: rgb(255, 0, 0);">Apna College</h1>
-    <h1 style="color: rgb(255, 0, 0);">Grishma Kandel</h1>
-    <h1 style="color: rgb(255, 0, 0);">Hello World</h1>
-    <p style="color: pink">This is a paragraph.</p>
-    <button style="color:lightblue; background-color: yellow;">Help</button> 
--->
-
-    <!-- Using Style Tag-->
-    <h1>Apna College</h1>
-    <h1>Grishma Kandel</h1>
-    <h1>Hello World</h1>
-<br/><br/>
-
-<h1>Grishma Kandel</h1>
-<h1>Apna College</h1>
-<p>This is paragraph 1</p>
-<p>This is paragraph 2</p>
-<button>This is button 1</button>
-<button>This is button 2</button>
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>CSS</title>
+    <link rel="stylesheet" href="style0.css" />
+  </head>
+  <body>
+    <h1>Random Heading</h1>
+    <div>
+      Now is the winter of our discontent Made glorious summer by this sun of
+      York; And all the clouds that lour'd upon our house In the deep bosom of
+      the ocean buried. Now are our brows bound with victorious wreaths; Our
+      bruised arms hung up for monuments; Our stern alarums changed to merry
+      meetings, Our dreadful marches to delightful measures. Grim-visaged war
+      hath smooth'd his wrinkled front;
+    </div>
+    <div>
+      And now, instead of mounting barded steeds To fright the souls of fearful
+      adversaries, He capers nimbly in a lady's chamber To the lascivious
+      pleasing of a lute. But I, that am not shaped for sportive tricks, Nor
+      made to court an amorous looking-glass; I, that am rudely stamp'd, and
+      want love's majesty To strut before a wanton ambling nymph; I, that am
+      curtail'd of this fair proportion,
+    </div>
+    <button>Click me</button>
+  </body>
 </html>
