Inline-Block Added

--- a/index1.html
+++ b/index1.html
@@ -9,18 +9,9 @@
 </head>
 
 <body>
-    <h2>heading1</h2>
-    <h2>heading2</h2>
-    <h1>Random Heading</h1>
-    <div>
-        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Praesentium sequi labore ut alias voluptate, ex
-        laboriosam! Quas itaque similique placeat quam ipsa, adipisci, laboriosam eius delectus nostrum necessitatibus
-        ab deleniti? Lorem ipsum dolor sit, amet consectetur adipisicing elit. Perferendis officia quibusdam expedita
-        consequatur ab harum labore animi neque ipsam, nostrum est optio voluptate facilis cupiditate officiis! Laborum
-        accusamus consectetur aliquam. <span>Inline</span>Lorem ipsum dolor sit amet consectetur adipisicing elit. Deleniti, nesciunt
-        consectetur. Expedita quod vero eaque perspiciatis ducimus facere voluptatem! Temporibus molestiae adipisci, est
-        ducimus rerum maiores delectus animi a minus.
-    </div>
+    <div></div>
+    <div></div>
+    <div id="third"></div>
 </body>
 
 </html>
