--- a/index1.html
+++ b/index1.html
@@ -9,9 +9,12 @@
 </head>
 
 <body>
-    <div></div>
-    <div></div>
-    <div id="third"></div>
+   <h1>Heading</h1>
+   <div id="outer">
+    <div id="inner">
+        
+    </div>
+   </div>
 </body>
 
 </html>
