--- a/index1.html
+++ b/index1.html
@@ -11,10 +11,25 @@
 <body>
    <h1>Heading</h1>
    <div id="outer">
-    <div id="inner">
-        
-    </div>
+    <div id="inner">This is inner.</div>
    </div>
+   <br/> <br/>
+
+   <button>Click Me</button>
+   <br/> <br/>
+
+   <section>
+    section 
+    <div>
+        div1
+        <div>
+            div2
+            <div>
+                div3
+            </div>
+        </div>
+    </div>
+   </section>
 </body>
 
 </html>
