--- a/parc0.html
+++ b/parc0.html
@@ -4,8 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="styleparc0.css">
 </head>
 <body>
     <div id="box">My box</div>
+    <br/> <br/>
+    <div class="box">Div 1</div>
+    <div class="box">Div 2</div>
+    <div class="box">Div 3</div>
 </body>
 </html>
