--- a/parc0.html
+++ b/parc0.html
@@ -12,5 +12,20 @@
     <div class="box">Div 1</div>
     <div class="box">Div 2</div>
     <div class="box">Div 3</div>
+    <br/> <br/>
+    <h1>List of Technologies</h1>
+    <ul>
+        <li>HTML</li>
+        <li>CSS</li>
+        <li>JavaScript</li>
+        <li>NodeJS</li>
+        <li>ReactJS</li>
+        <li>SQL</li>
+        <li>MongoDB</li>
+        <li>Java</li>
+        <li>C++</li>
+        <li>C</li>
+        <li>Python</li>
+    </ul>
 </body>
 </html>
