--- a/css3.html
+++ b/css3.html
@@ -7,10 +7,7 @@
     <link rel="stylesheet" href="css3.css">
 </head>
 <body>
-    <div><h3>This is my heading.</h3></div>
-    <div id="opacity">
-        <h3>This is my heading.</h3>
-        <button>Click Me</button>
-    </div>
+    <div></div>
+    
 </body>
 </html>
