--- a/css3.html
+++ b/css3.html
@@ -9,7 +9,7 @@
 <body>
     <div id="one">1</div>
     <div id="two">2</div>
-    <div id="3">3</div>
+    <div id="third">3</div>
     <div id="4">4</div>
     <div id="5">5</div>
 </body>
